<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/fondo">

    <TextView
        android:background="@color/fondoTexto"
        android:layout_margin="10dp"
        android:gravity="right|center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="0"
        android:fontFamily="@font/digital"
        android:textColor="@color/colorTexto"
        android:padding="20dp"
        android:textSize="70sp"
        android:id="@+id/texto"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
           >

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_7"
            android:textSize="30sp"
            android:id="@+id/siete"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_8"
            android:textSize="30sp"
            android:id="@+id/ocho"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_9"
            android:textSize="30sp"
            android:id="@+id/nueve"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/x"
            android:textSize="30sp"
            android:id="@+id/multiplica"
            android:backgroundTint="@color/opera"
            android:padding="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:textSize="30sp"
            android:id="@+id/cuatro"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_5"
            android:textSize="30sp"
            android:id="@+id/cinco"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:textSize="30sp"
            android:id="@+id/seis"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:textSize="30sp"
            android:id="@+id/divide"
            android:backgroundTint="@color/opera"
            android:padding="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:textSize="30sp"
            android:id="@+id/uno"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_2"
            android:textSize="30sp"
            android:id="@+id/dos"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:textSize="30sp"
            android:id="@+id/tres"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/resta"
            android:textSize="40sp"
            android:id="@+id/resta"
            android:backgroundTint="@color/opera"
            android:padding="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.375"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:textSize="40sp"
            android:id="@+id/cero"
            android:backgroundTint="@color/digit"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.375"
            android:layout_height="match_parent"
            android:text="@string/suma"
            android:textSize="40sp"
            android:id="@+id/suma"
            android:backgroundTint="@color/opera"
            android:padding="0dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/c"
            android:textSize="40sp"
            android:id="@+id/C"
            android:backgroundTint="@color/resulta"
            android:padding="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/igual"
            android:textSize="50sp"
            android:id="@+id/igual"
            android:backgroundTint="@color/resulta"
            android:padding="0dp"/>

    </LinearLayout>
</LinearLayout>